FIX: 汎用フォントを追加

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -13,6 +13,6 @@
   color: #333333;
   text-shadow:1px 0 white;
   h1{
-    font-family: "Arial Black";
+    font-family: "Arial Black", monospace;
   }
 }
