--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the Boards controller here.
+// Place all the styles related to the boards controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.title{
+  color: #6b6d6e;
+  text-align: center;
+  padding: 0.25em;
+  border-top: solid 2px #000000;
+  border-bottom: solid 2px #000000;
+  background: repeating-linear-gradient(-45deg, #ffffff, #ffffff 3px,#ced2d6 3px, #ced2d6 7px);
+}
