--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Boards#index</h1>
-<p>Find me in app/views/boards/index.html.erb</p>
+<% content_for(:title, "動画一覧 | CATching") %>
+
+<div class='content m-5'>
+  <h1 class='title p-4'>動画一覧</h1>
+
+  <!-- 掲示板一覧 -->
+  <div class='row'>
+    <div class='col-12 my-5'>
+      <div class='row'>
+        <% if @boards.present? %>
+          <div class='card-deck col-12'>
+            <%= render @boards %>
+          </div>
+        <% else %>
+          <p>該当記事がありません</p>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
