--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,9 +1,10 @@
 .header-background{
   background-image: image-url("header.jpg");
   background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 300px;
+  height: 370px;
 }
 
 .title-text{
