--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,19 +1,19 @@
-<p id="notice"><%= notice %></p>
+<% content_for(:title, "#{@board.title} | CATching") %>
 
-<p>
-  <strong>Movie url:</strong>
-  <%= @board.movie_url %>
-</p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @board.title %>
-</p>
-
-<p>
-  <strong>Content:</strong>
-  <%= @board.content %>
-</p>
-
-<%= link_to 'Edit', edit_board_path(@board) %> |
-<%= link_to 'Back', boards_path %>
+<div class='content m-5'>
+  <h1 class='title p-4'><%= @board.title %></h1>
+  <!-- 掲示板詳細 -->
+  <div class='row'>
+    <div class='col-lg-10 offset-lg-1 py-5'>
+      <div class='embed-responsive embed-responsive-16by9'>
+	      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/<%= @board.movie_url.last(11) %>" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <% if @board.content.present?%>
+        <div class='content-text'>
+          <h4>説明</h4>
+          <%= safe_join(@board.content.split("\n"),tag(:br)) %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
