--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,14 @@
 <header>
-  <div class="header-background d-flex align-items-center">
+  <nav class='navbar bg-secondary justify-content-end'>
+    <ul class='nav'>
+        <li><%= active_link_to "動画一覧", boards_path, class: 'nav-link' %></li>
+        <li><%= active_link_to '詳細検索', '#', class: 'nav-link' %></li>
+        <li><%= active_link_to '動画新規登録', new_board_path, class: 'nav-link' %></li>
+        <li><%= active_link_to '問い合わせ', '#', class: 'nav-link' %></li>
+    </ul>
+  </nav>
+
+  <div class="header-background d-flex align-items-center" >
     <div class="title-text text-center">
       <h1>CATching</h1>
       <p>~押し猫が見つかる動画検索サイト~</p>
