--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -12,5 +12,9 @@
     <%= f.label :movie_url, "YouTubeのURL"%>
     <%= f.text_field :movie_url, class: 'form-control' %>
   </div>
+  <div class='form-group'>
+    <%= f.label :tag_list %>
+    <%= f.text_field :tag_list, value: @board.tag_list.join(',')%>
+  </div>
   <%= f.submit %>
 <% end %>
