Fix: タグ機能修正

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -16,9 +16,26 @@
         </div>
       <% end %>
       
-      <% if @tags.present? %>
+      <% if @cat_types.present? || @hair_colors.present? || @characters.present? || @length_of_legs.present? || @tags.present? %>
         <h4>タグ</h4>
+        <h5>猫の種類<h5>
         <div class='btn-group'>
+          <% @cat_types.each do |cat_type| %>
+            <%=link_to "#{cat_type.name}(#{cat_type.taggings_count})", '#', class: 'btn-flat-border mx-1' %>
+          <% end %>
+
+          <% @hair_colors.each do |hair_color| %>
+            <%=link_to "#{hair_color.name}(#{hair_color.taggings_count})", '#', class: 'btn-flat-border mx-1' %>
+          <% end %>
+
+          <% @characters.each do |character| %>
+            <%=link_to "#{character.name}(#{character.taggings_count})", '#', class: 'btn-flat-border mx-1' %>
+          <% end %>
+
+          <% @length_of_legs.each do |length_of_leg| %>
+            <%=link_to "#{length_of_leg.name}(#{length_of_leg.taggings_count})", '#', class: 'btn-flat-border mx-1' %>
+          <% end %>
+
           <% @tags.each do |tag| %>
             <%=link_to "#{tag.name}(#{tag.taggings_count})", '#', class: 'btn-flat-border mx-1' %>
           <% end %>
