Fix: 検索機能の修正

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -3,7 +3,7 @@
 <div class='content mx-5'>
   <div class='sform-wrap mt-3'>
     <%= search_form_for(@q, url: boards_path, id: 'sform', class: 'float-right') do |f| %>
-      <%= f.search_field :title_or_content_cont, placeholder: "検索キーワード", id: 'sbox', class: 'px-3' %>
+      <%= f.search_field :title_or_content_or_cat_types_name_or_hair_colors_name_or_characters_name_or_length_of_legs_name_or_tags_name_cont_all, placeholder: "検索キーワード", id: 'sbox', class: 'px-3' %>
       <%= f.submit "検索", id: 'sbtn'%>
     <% end %>
   </div>
