ADD:sorceryでのログイン機能実装 ADD:current_userの投稿動画のリスト FIX:seedファイルの修正 FIX:ヘッダーの修正

--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -8,7 +8,9 @@
 				<h5 class='card-title'><%= board.title %></h5>
 				<p class='card-text'><%= board.content %></p>
 				<div class='text-right'>
-					<%= link_to '編集', edit_board_path(board), class: 'btn-flat-border' %>
+					<% if current_user.own?(board)%>
+						<%= link_to '編集', edit_board_path(board), class: 'btn-flat-border' %>
+					<% end %>
 					<%= link_to '詳細', board_path(board), class: 'btn-flat-border' %>
 				</div>
 			</div>
