--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class='bg-secondary'>
   <div class='container'>
     <nav class='row d-flex align-items-center text-center'>
-      <p class='text-white'>CATching</p>
+      <p class='text-white'>© CATching 2022</p>
     </nav>
   </div>
 </footer>
