--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @board, local: true) do |f| %>
   <%= render 'layouts/error_messages', model: f.object%>
   <div class='form-group'>
-    <%= f.label :title, "タイトル" %>
+    <%= f.label :title, "タイトル※" %>
     <%= f.text_field :title, class: 'form-control' %>
   </div>
   <div class='form-group'>
@@ -9,7 +9,7 @@
     <%= f.text_area :content, class: 'form-control', rows: 10 %>
   </div>
   <div class='form-group'>
-    <%= f.label :movie_url, "YouTubeのURL  (https://www.youtube.com/watch?v=11桁の動画ID)"%>
+    <%= f.label :movie_url, "YouTubeのURL※  (https://www.youtube.com/watch?v=11桁の動画ID)"%>
     <%= f.text_field :movie_url, class: 'form-control' %>
   </div>
   <h4 class='pt-3'>タグ(,又は空白区切り)</h4>
