--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -13,7 +13,7 @@
           <%= f.text_field :name, class: 'form-control' %>
         </div>
         <div class='form-group'>
-          <%= f.label :email,'メールアドレス*' %>
+          <%= f.label :email,'メールアドレス※' %>
           <%= f.email_field :email, class: 'form-control' %>
         </div>
         <div class='form-group'>
