ADD: ツイッターシェア機能の追加 ADD: OGPの設定 FIX: 各種微調整

--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -13,7 +13,7 @@
 
 .content-text{
   padding: 0.5em 1em;
-  margin: 2em 0;
+  margin: 3em 0;
   background: repeating-linear-gradient(-45deg, #ffffff, #ffffff 3px,#e9ecf0 3px, #e9ecf0 7px);
 }
 .content-text p {
@@ -103,7 +103,7 @@
   justify-content: center;
 }
 
-.btn-group {
+.tag-group {
   display: flex;
   overflow: auto;
 }
