--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
-<% content_for(:title, 'ログイン|CATching')%>
+<% content_for(:title, 'ユーザー登録|CATching')%>
 
 <div class='content  m-5'>
-  <h1 class='title p-4'>ログイン</h1>
+  <h1 class='title p-4'>ユーザー登録</h1>
   <div class='row'>
     <div class='col-lg-8 offset-lg-2 py-5'>
       <%= form_with model: @user, local: true do |f| %>
