--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -9,7 +9,7 @@
     <%= f.text_area :content, class: 'form-control', rows: 10 %>
   </div>
   <div class='form-group'>
-    <%= f.label :movie_url, "YouTubeのURL※  (https://www.youtube.com/watch?v=11桁の動画ID)"%>
+    <%= f.label :movie_url, "YouTubeのURL※  (https://www.youtube.com/watch?v=11桁の動画IDなど動画IDで終わるもの)"%>
     <%= f.text_field :movie_url, class: 'form-control' %>
   </div>
   <h4 class='pt-3'>タグ(,又は空白区切り)</h4>
