--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -51,7 +51,7 @@
       <% end %>
 
       <div class='float-right'>
-        <% if current_user.own?(@board)%>
+        <% if logged_in? && current_user.own?(@board)%>
           <%= link_to '編集', edit_board_path(@board), class: 'btn-flat-border mx-1' %>
           <%= link_to '削除', board_path(@board), method: :delete, data: { confirm: '動画情報を削除しますか?'}, class: 'btn btn-danger mx-1' %>
         <% end %>
