FIX:コメントの削除 FIX:Twitterのハッシュタグ追加

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -11,7 +11,7 @@
 
       <div class='sns-btn'>
         <div class='float-right p-1'>
-          <%= link_to "https://twitter.com/share?url=#{ request.url }&text=#{ @board.title }の猫動画を押してます！%0a押し猫を探すならCATching", class: 'btn btn-default ', target: '_blank', style: 'border: solid 2px #5c5e60;' do %>
+          <%= link_to "https://twitter.com/share?url=#{ request.url }&text=#{ @board.title }の猫動画を押してます！%0a押し猫を探すならCATching%0a%0a%23CATching", class: 'btn btn-default ', target: '_blank', style: 'border: solid 2px #5c5e60;' do %>
             <i class='fab fa-twitter' style='color: #3399FF;'></i>
             Twitterでシェア
           <% end %>
