--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: @board, local: true) do |f| %>
-  <%= render 'layouts/error_messages', model: f.object%>
+  <%= render 'shared/error_messages', model: f.object%>
   <div class='form-group'>
     <%= f.label :title, "タイトル※" %>
     <%= f.text_field :title, class: 'form-control' %>
