FIX:フッターの位置の修正

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,9 @@
-  <footer class='bg-secondary'>
-    <div class='container'>
-      <nav class='row d-flex align-items-center text-center'>
-        <%= link_to '規約一覧', page_path('index'), class: 'text-white' %>
-        <p class='text-white'>© CATching 2022</p>
-      </nav>
-    </div>
-  </footer>
-</div>
+</main>
+<footer class='bg-secondary'>
+  <div class='container'>
+    <nav class='row d-flex align-items-center text-center'>
+      <%= link_to '規約一覧', page_path('index'), class: 'text-white' %>
+      <p class='text-white'>© CATching 2022</p>
+    </nav>
+  </div>
+</footer>
