--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,9 +23,12 @@
  @import "contacts";
  @import "pages";
 
- .footerFixed{
-  min-height: 100vh; /* ←コンテンツの高さの最小値＝ブラウザの高さに指定 */
-  position: relative;/* ←相対位置 */
-  box-sizing: border-box;
-  /* ↑ヘッダーやフッターを含むすべての要素の高さ＝min-height:100vhになるように指定 */
+body{
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
+
+main{
+  flex: 1;
 }
