FIX:誤字修正 FIX:metaタグの情報修正 FIX:説明文の字数修正 FIX:フッター位置のCSS修正

--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -6,7 +6,7 @@
 			</div>
 			<div class='card-body'>
 				<h5 class='card-title'><%= board.title %></h5>
-				<p class='card-text'><%= board.content.truncate(60) %></p>
+				<p class='card-text'><%= board.content %></p>
 				<div class='text-right'>
 					<% if logged_in? && current_user.own?(board)%>
 						<%= link_to '編集', edit_board_path(board), class: 'btn-flat-border' %>
