--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -14,6 +14,6 @@
   color: #333333;
   text-shadow:1px 0 white;
   h1{
-    font-family: "Arial Black", monospace;
+    font-family: "Arial Black", HiraKakuProN-W6, impact, monospace;
   }
 }
