--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -10,7 +10,7 @@
   <div class="header-background d-flex align-items-center" >
     <div class="title-text text-center">
       <h1>CATching</h1>
-      <p>~押し猫が見つかる動画検索サイト~</p>
+      <p>~推し猫が見つかる動画まとめサイト~</p>
     </div>
   </div>
 </header>
