--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= display_meta_tags default_meta_tags %>
+    <% if Rails.env.production? %>
+      <%= render 'layouts/google_analytics' %>
+      <%= render 'layouts/google_search_console' %>
+    <% end %>
   </head>
 
   <body>
